misc: cart unit test reword